# keyboard_layout_optimizer

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
python/: dataset.py
src/: algorithms.rs  interfaces.rs  keyboard_layout.rs  lib.rs  main.rs  n_gram.rs
src/algorithms/: annealing.rs  genetic.rs  hill_climbing.rs
src/interfaces/: algorithm.rs
src/keyboard_layout/: hand_model.rs  logical_layout.rs  physical_layout.rs
