[tool.poetry]
name = "keyboard-layout-optimizer"
version = "0.1.0"
description = ""
authors = ["kentaro <murakami.kentaro.514@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^3.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
